--- a/CrossSolar/Properties/launchSettings.json
+++ b/CrossSolar/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:5000/",
+      "applicationUrl": "http://localhost:5000",
       "sslPort": 0
     }
   },
@@ -11,7 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "panel/XXXX1111YYYY2222/analytics",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
