--- a/CrossSolar/appsettings.json
+++ b/CrossSolar/appsettings.json
@@ -1,6 +1,6 @@
-﻿{
+﻿  {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=CrossSolarDb;Integrated Security=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Integrated Security=true"
   },
   "Logging": {
     "IncludeScopes": false,
